Align fixes

--- a/css/color-changer.css
+++ b/css/color-changer.css
@@ -11,6 +11,8 @@
     justify-content: center;
     list-style: none;
     display: flex;
+    padding: 0px;
+    margin: 0px;
 }
 
 #color-changer-green {
