--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ footer {
 #social-icons-container {
     list-style: none;
     font-size: 24px;
+    padding: 0px;
 }
 
 .social-icons {
